# KAMU

./: AUTHORS  Makefile.am  NEWS  README  README.md  configure.ac
src/: Makefile.am  Makefile.in  amu_integral.c  amu_integrand.c
src/CUBA/: hcubature.c
src/HEADERS/: KAMU.h  cmdline.h  hcubature.h  integrands.h  shifted.h  vwrapper.h
src/INTEGRANDS/: integrands.c  shifted.c
src/IO/: cmdline.c
